--- a/MachineLearningModelTraining.ipynb
+++ b/MachineLearningModelTraining.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPQX3YpI34z4ztveWm6Wzs",
+      "authorship_tag": "ABX9TyMlO6FwvVDLGtJGm408D1E/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,11 +108,11 @@
         "print(data.head())\n"
       ],
       "metadata": {
-        "id": "Ndo9BstBdyu4",
-        "outputId": "6c3cad1a-7a0c-4980-f8fc-3c18715237ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ndo9BstBdyu4",
+        "outputId": "6c3cad1a-7a0c-4980-f8fc-3c18715237ec"
       },
       "execution_count": 12,
       "outputs": [
@@ -177,11 +177,11 @@
         "print(f'mse:{mse}')"
       ],
       "metadata": {
-        "id": "vuhLHBvPiKeF",
-        "outputId": "4680b55e-70ac-459a-b1ec-def31cca7b8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vuhLHBvPiKeF",
+        "outputId": "4680b55e-70ac-459a-b1ec-def31cca7b8c"
       },
       "execution_count": 24,
       "outputs": [
@@ -212,14 +212,17 @@
         "\n",
         "best_params=grid_search.best_params_\n",
         "print(f'best parameters:{best_params}')\n",
-        "\n"
+        "best_rf_model=grid_search.best_estimator_\n",
+        "best_rf_y_pred=best_rf_model.predict(X_test)\n",
+        "best_rf_mse=mean_squared_error(y_test,best_rf_y_pred)\n",
+        "print(f'mse:{mse}')"
       ],
       "metadata": {
-        "id": "SMV4eZc2i_Xw",
-        "outputId": "4da1e67f-2cfd-4349-8e5e-a84eb6e3115b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SMV4eZc2i_Xw",
+        "outputId": "484ff7b7-7f8a-4ab4-ac8b-399d896012f8"
       },
       "execution_count": null,
       "outputs": [
