--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -73,7 +73,7 @@
         "print(f\"Test Accuracy: {test_accuracy * 100:.2f}%\")\n",
         "\n",
         "# Preprocess your custom image\n",
-        "image_path = \"/photo_2025-03-16_11-39-22.jpg\"  # Update the file path as needed\n",
+        "image_path = \"/photo_2025-03-16_11-39-22.jpg\"  # image file path as \n",
         "img = Image.open(image_path).convert(\"L\")  # Convert to grayscale\n",
         "img = img.resize((28, 28))  # Resize to 28x28 pixels\n",
         "img_array = np.array(img) / 255.0  # Normalize pixel values\n",
@@ -83,7 +83,7 @@
         "X_test_with_custom = np.concatenate([X_test, img_array], axis=0)\n",
         "y_test_with_custom = np.append(y_test, -1)  # Add a placeholder label for your image\n",
         "\n",
-        "# Predict using the updated test set\n",
+        "# Predict using the updated test se\n",
         "predictions = model.predict(X_test_with_custom)\n",
         "custom_prediction = np.argmax(predictions[-1])  # Prediction for the custom image\n",
         "\n",
